--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav>
-	<section id="">
+	<section id="headBar">
 		<ul>
 			<li>
 				
@@ -31,7 +31,7 @@
 	</div>
 </section>
 
-<section id="">
+<section id="support">
 	<div class="supplement">
 		
 	</div>
