--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <nav>
 	<section id="headBar">
+		<img src="/photos/logo.png">
 		<ul>
 			<li>
 				
@@ -18,7 +19,7 @@
 </nav>
 
 <section id="landing">
-	<img src="">
+	<img src="/photos/munderdifflin.png">
 </section>
 
 <section id="content">
