--- a/index.html
+++ b/index.html
@@ -9,35 +9,48 @@
 <body>
 <nav>
 	<section id="headBar">
-		<img src="/photos/logo.png">
-		<ul>
+		<ul id="nav">
+			<li class="toggle">
+				<div class="bar1"></div>
+				<div class="bar2"></div>
+				<div class="bar3"></div>
+			</li>
 			<li>
-				
+				<a href="#">About</a>
+			</li>
+			<li>
+				<a href="#">Services</a>
+			</li>
+			<li>
+				<a href="#">Contact</a>
+			</li>
+			<li>
+				<a href="#">Products</a>
 			</li>
 		</ul>
 	</section>
 </nav>
 
 <section id="landing">
-	<img src="/photos/munderdifflin.png">
+	<img src="photos/munder-difflin.png">
 </section>
 
 <section id="content">
 	<div class="supplement">
-		
+		<img src="pics/handshake.jpeg">
 	</div>
 
 	<div class="supplement">
-		
+		<img src="pics/yrdesign.jpeg">
 	</div>
 </section>
 
 <section id="support">
 	<div class="supplement">
-		
+		<img src="pics/finedrawing.jpeg">
 	</div>
 	<div class="supplement">
-		
+		<img src="pics/chartcolor.jpeg">
 	</div>
 </section>
 <footer>
@@ -46,6 +59,6 @@
 	</div>
 </footer>
 
-<script src="script.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
