design taking form

--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
 		</ul>
 	</section>
 </nav>
-
 <section id="landing">
 	<img src="photos/munder-difflin.png">
 </section>
-
 <section id="content">
 	<div class="supplement">
 		<img src="pics/handshake.jpeg">
@@ -52,6 +50,21 @@
 	<div class="supplement">
 		<img src="pics/chartcolor.jpeg">
 	</div>
+</section>
+<section id="connect">
+<div id="reach1">
+	<!--<img src="pics/gpsmall.jpeg">-->
+	<p>Wherever You Go, We're With You</p>
+</div>
+<div id="reach2">
+	<!--<img src="pics/cloudsmall.jpeg">-->
+	<p>All of Your Data is at the Ready</p>
+
+</div>
+<div id="reach3">
+	<!--<img src="pics/global.jpeg">-->
+	<p>Global Shipping Available</p>
+</div>
 </section>
 <footer>
 	<div id="foot">
