solved photo with text drop problem

--- a/index.html
+++ b/index.html
@@ -33,36 +33,47 @@
 <section id="landing">
 	<img src="photos/munder-difflin.png">
 </section>
-<section id="content">
-	<div class="supplement">
-		<img src="pics/handshake.jpeg">
-	</div>
-
-	<div class="supplement">
-		<img src="pics/yrdesign.jpeg">
-	</div>
+<section class="support">
+	<section class="supplement">
+		<button class="collapsible">
+			<img src="pics/handshake.jpeg">
+		</button>
+		<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+	</section>
+	<section class="supplement">
+		<button class="collapsible">
+			<img src="pics/yrdesign.jpeg">
+		</button>
+		<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut a
+	</section>
 </section>
 
-<section id="support">
-	<div class="supplement">
-		<img src="pics/finedrawing.jpeg">
-	</div>
-	<div class="supplement">
-		<img src="pics/chartcolor.jpeg">
-	</div>
+<section class="support">
+        <section class="supplement">
+<button class="collapsible"><img src="pics/finedrawing.jpeg"></button>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+</section>
+<section class="supplement">
+<button class="collapsible"><img src="pics/chartcolor.jpeg"></button>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+</section>
 </section>
 <section id="connect">
 <div id="reach1">
-	<!--<img src="pics/gpsmall.jpeg">-->
 	<p>Wherever You Go, We're With You</p>
 </div>
 <div id="reach2">
-	<!--<img src="pics/cloudsmall.jpeg">-->
 	<p>All of Your Data is at the Ready</p>
 
 </div>
 <div id="reach3">
-	<!--<img src="pics/global.jpeg">-->
 	<p>Global Shipping Available</p>
 </div>
 </section>
