--- a/index.html
+++ b/index.html
@@ -9,24 +9,12 @@
 <body>
 <nav>
 	<section id="headBar">
+		<a href="#">Menu</a>
 		<ul id="nav">
-			<li class="toggle">
-				<div class="bar1"></div>
-				<div class="bar2"></div>
-				<div class="bar3"></div>
-			</li>
-			<li>
-				<a href="#">About</a>
-			</li>
-			<li>
-				<a href="#">Services</a>
-			</li>
-			<li>
-				<a href="#">Contact</a>
-			</li>
-			<li>
-				<a href="#">Products</a>
-			</li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Contact</a></li>
+			<li><a href="#">Products</a></li>
 		</ul>
 	</section>
 </nav>
