started mobile responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet">
 </head>
 <body>
 <nav>
@@ -18,7 +19,7 @@
 	</section>
 </nav>
 <section id="landing">
-	<img src="photos/munder-difflin.png">
+	<img src="photos/munDiffNew.png">
 </section>
 <section class="support">
 	<section class="supplement">
