--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</section>
 </nav>
 <section id="landing">
-	<img src="photos/munDiffNew.png">
+	<img src="pics/munDiffNew.png">
 </section>
 <section class="support">
 	<section class="supplement">
@@ -58,16 +58,16 @@
 	<p>Wherever You Go, We're With You</p>
 </div>
 <div id="reach2">
-	<p>All of Your Data is at the Ready</p>
+	<p>Global Shipping Available</p>
 
 </div>
 <div id="reach3">
-	<p>Global Shipping Available</p>
+	<p>All of Your Data is One Click Away</p>
 </div>
 </section>
 <footer>
 	<div id="foot">
-		
+		<h6>Copyright 2018 Munder Difflin &copy;</h6>
 	</div>
 </footer>
 
